--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         header h1 {
             margin: 0;
-            font-size: 2.5rem;
+            font-size: 3rem; /* Increased by 20% from 2.5rem */
             letter-spacing: 2px;
         }
 
