--- a/pendulum/index.html
+++ b/pendulum/index.html
@@ -422,6 +422,50 @@
                 }
                 // --- End Color Helper Functions ---
 
+                /**
+                 * Converts an HSL color value to RGB.
+                 * @memberof ColorHelpers
+                 * @param {number} h - Hue (0-1).
+                 * @param {number} s - Saturation (0-1).
+                 * @param {number} l - Lightness (0-1).
+                 * @returns {{r: number, g: number, b: number}} RGB object (0-255).
+                 */
+                function hslToRgb(h, s, l) {
+                    let r, g, b;
+                    if (s == 0) {
+                        r = g = b = l; // achromatic
+                    } else {
+                        const hue2rgb = (p, q, t) => {
+                            if (t < 0) t += 1;
+                            if (t > 1) t -= 1;
+                            if (t < 1 / 6) return p + (q - p) * 6 * t;
+                            if (t < 1 / 2) return q;
+                            if (t < 2 / 3) return p + (q - p) * (2 / 3 - t) * 6;
+                            return p;
+                        };
+                        const q = l < 0.5 ? l * (1 + s) : l + s - l * s;
+                        const p = 2 * l - q;
+                        r = hue2rgb(p, q, h + 1 / 3);
+                        g = hue2rgb(p, q, h);
+                        b = hue2rgb(p, q, h - 1 / 3);
+                    }
+                    return { r: Math.round(r * 255), g: Math.round(g * 255), b: Math.round(b * 255) };
+                }
+
+                /**
+                 * Generates a random HEX color, either light or dark.
+                 * @memberof ColorHelpers
+                 * @param {boolean} isLightBase - True for a light color, false for a dark color.
+                 * @returns {string} A random HEX color string.
+                 */
+                function getRandomHexColor(isLightBase) {
+                    const h = Math.random(); // Hue 0-1
+                    const s = isLightBase ? (0.3 + Math.random() * 0.4) : (0.4 + Math.random() * 0.5); // Saturation: less for light, potentially more for dark
+                    const l = isLightBase ? (0.75 + Math.random() * 0.20) : (0.05 + Math.random() * 0.25); // Lightness: 0.75-0.95 for light, 0.05-0.30 for dark
+                    const { r, g, b } = hslToRgb(h, s, l);
+                    return rgbToHex(r, g, b);
+                }
+
                 function updateDynamicTheme() {
                     /**
                      * Updates the dynamic theme of the page based on selected colors.
@@ -765,12 +809,23 @@
                  * Sets initial theme colors, updates slider values, resizes canvas, and registers service worker.
                  */
                 function initialize() {
-                    document.documentElement.style.setProperty('--sim-background-color', simBgColorPicker.value);
-                    document.documentElement.style.setProperty('--main-color', mainColorPickerEl.value);
-                    
-                    currentSimBackgroundColor = simBgColorPicker.value; 
-                    currentMainColor = mainColorPickerEl.value; 
+                    // Randomly determine theme: light background or dark background
+                    const preferLightBackground = Math.random() < 0.5;
 
+                    if (preferLightBackground) {
+                        currentSimBackgroundColor = getRandomHexColor(true);  // Generate a light background color
+                        currentMainColor = getRandomHexColor(false); // Generate a dark main/trace color
+                    } else {
+                        currentSimBackgroundColor = getRandomHexColor(false); // Generate a dark background color
+                        currentMainColor = getRandomHexColor(true);  // Generate a light main/trace color
+                    }
+
+                    // Update the color picker input elements to reflect the new random theme
+                    simBgColorPicker.value = currentSimBackgroundColor;
+                    mainColorPickerEl.value = currentMainColor;
+
+                    document.documentElement.style.setProperty('--sim-background-color', currentSimBackgroundColor);
+                    document.documentElement.style.setProperty('--main-color', currentMainColor);
                     updateDynamicTheme(); 
 
                     [length1Slider, length2Slider, mass1Slider, mass2Slider, angle1Slider, angle2Slider].forEach(slider => {
