--- a/snake/index.html
+++ b/snake/index.html
@@ -1,3 +1,63 @@
+<!--
+    Snake VS - A Multiplayer and AI Snake Game
+    Version: 1.3
+
+    Game Description:
+    Snake VS is a modern take on the classic snake game, offering multiple game modes
+    for single-player and multiplayer experiences. Players control a snake, aiming to
+    eat food to grow longer while avoiding collisions with themselves, other snakes,
+    or (in some modes) the boundaries.
+
+    Game Modes:
+    1.  VS AI:
+        -   Player 1 (P1) competes against an AI-controlled snake.
+        -   The goal is to outlast the AI.
+        -   The game speeds up and food changes color as levels increase.
+        -   Score is tracked as P1 Wins vs AI Wins.
+
+    2.  2 Player (2P):
+        -   Two human players compete on the same device.
+        -   Player 1 uses WASD keys. Player 2 uses Arrow keys.
+        -   Touch controls are split: P1 controls the bottom half of the screen, P2 controls the top half.
+        -   The goal is to outlast the other player.
+        -   Score is tracked as P1 Wins vs P2 Wins.
+
+    3.  Battle Royale:
+        -   Player 1 (P1) competes against 5 AI-controlled snakes.
+        -   The goal is to be the last snake surviving.
+        -   When a snake is eliminated, its body turns into food items.
+        -   Rankings are displayed at the end of the battle.
+        -   An "Exit Battle" button appears if P1 is eliminated but other AIs are still fighting,
+            allowing P1 to end the current battle and see the results.
+
+    Controls:
+    -   Player 1 (All Modes):
+        -   Keyboard: W (Up), A (Left), S (Down), D (Right)
+        -   Touch: Swipe on the bottom half of the screen (in 2P mode) or anywhere (in VS AI / Battle Royale).
+    -   Player 2 (2P Mode Only):
+        -   Keyboard: Arrow Up, Arrow Left, Arrow Down, Arrow Right
+        -   Touch: Swipe on the top half of the screen.
+
+    AI Types (Battle Royale Mode):
+    Each AI snake in Battle Royale mode is assigned one of the following types, influencing its behavior:
+    -   Type 1 (Standard): Balanced AI, generally seeks the closest food.
+    -   Type 2 (Slightly Erratic): Similar to Type 1, but with a small chance (25%) of making a suboptimal (but still safe) turn if one is available, adding a bit of unpredictability.
+    -   Type 3 (Farthest Food Hunter / Player Avoider): Targets the farthest food item. In Battle Royale, it also tries to avoid the human player (P1) if P1's snake is relatively long (length > 5). This can lead to more defensive or evasive maneuvers.
+    -   Type 4 (Wiggler): If a safe turn (left or right) leads to a food item or is nearly as good as going straight, this AI prefers to make that turn over continuing straight, even if straight is slightly more optimal. This can make it appear more "active" or "exploratory."
+    -   Type 5 (Directionally Biased): This AI has a randomly assigned preferred turning direction (either left or right). When evaluating moves, it gives a slight preference to turns that match its bias and a slight penalty to turns against its bias. This can lead to more circular or patterned movements.
+
+    Tips & Details:
+    -   Canvas Border Color:
+        -   In VS AI and 2P modes: The top and left borders of the game canvas match the AI/Player 2's color. The bottom and right borders match Player 1's color. This helps quickly identify which color you (P1) are.
+        -   In Battle Royale mode: The top and left borders match the color of the *first* AI snake. The bottom and right borders match Player 1's color.
+    -   Leveling Up: In VS AI and 2P modes, collecting 10 food items advances the level, increasing game speed and changing the food color.
+    -   Food Spawning: Food items will not spawn directly on a snake's body.
+    -   AI Decision Delay: AI snakes have a slight delay in their decision-making process to simulate more natural movement rather than instant reactions.
+    -   Touch Controls: A swipe gesture (drag finger and release) determines the snake's next direction. The swipe needs to cover a minimum distance (swipeThreshold) to register.
+    -   Color Generation: Snake colors are procedurally generated using HSL color space to ensure a variety of distinct and vibrant colors, especially in Battle Royale.
+    -   Start Animations: Brief visual animations play before 2P and Battle Royale modes start to indicate player colors/sides.
+
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
