--- a/snake/index.html
+++ b/snake/index.html
@@ -430,15 +430,15 @@
             gameSpeed = Math.round(gameSpeed * LEVEL_SPEED_INCREASE_FACTOR); 
             if (gameInterval) clearInterval(gameInterval); gameInterval = setInterval(gameLoop, gameSpeed);
             const newFoodColor = levelFoodColors[(currentLevel - 1) % levelFoodColors.length];
-            wfoods.forEach(food => { 
-            w    const pulseFactor = Math.abs(Math.sin(Date.now() / 180)) * 0.3 + 0.7; // Pulse from 70% to 100%
-            w    const radius = (gridSize / 2.1) * pulseFactor; // Adjust base radius slightly if needed
-            w    const centerX = food.x * gridSize + gridSize / 2;
-            w    const centerY = food.y * gridSize + gridSize / 2;
-            w    ctx.fillStyle = food.color; ctx.shadowBlur = 15; ctx.shadowColor = food.color;
-            w    ctx.beginPath(); ctx.arc(centerX, centerY, Math.max(2, radius), 0, Math.PI * 2); ctx.fill();
-            w    ctx.shadowBlur = 0;
-            w});
+            foods.forEach(food => { 
+                const pulseFactor = Math.abs(Math.sin(Date.now() / 180)) * 0.3 + 0.7; // Pulse from 70% to 100%
+                const radius = (gridSize / 2.1) * pulseFactor; // Adjust base radius slightly if needed
+                const centerX = food.x * gridSize + gridSize / 2;
+                const centerY = food.y * gridSize + gridSize / 2;
+                ctx.fillStyle = food.color; ctx.shadowBlur = 15; ctx.shadowColor = food.color;
+                ctx.beginPath(); ctx.arc(centerX, centerY, Math.max(2, radius), 0, Math.PI * 2); ctx.fill();
+                ctx.shadowBlur = 0;
+            });
         }
         function updateSnake(snake) { 
             try {
@@ -631,11 +631,11 @@
                 });
 
                 foods.forEach(food => { 
-                    const pulseFactor = Math.abs(Math.sin(Date.now() / 160)) * 0.5 + 0.5; // Pulse from 50% to 100%
-                    const radius = (gridSize / 2.0) * pulseFactor; 
+                    const pulseFactor = Math.abs(Math.sin(Date.now() / 200)) * 0.15 + 0.85; // Pulse from 85% to 100%
+                    const radius = (gridSize / 2.2) * pulseFactor; // Slightly smaller than half grid for better look
                     const centerX = food.x * gridSize + gridSize / 2;
                     const centerY = food.y * gridSize + gridSize / 2;
-                    ctx.fillStyle = food.color; ctx.shadowBlur = 20; ctx.shadowColor = food.color; // Increased shadowBlur
+                    ctx.fillStyle = food.color; ctx.shadowBlur = 15; ctx.shadowColor = food.color;
                     ctx.beginPath(); ctx.arc(centerX, centerY, Math.max(2, radius), 0, Math.PI * 2); ctx.fill();
                     ctx.shadowBlur = 0;
                 });
