--- a/btc/index.html
+++ b/btc/index.html
@@ -29,6 +29,12 @@
             box-sizing: border-box;
         }
 
+        .header-title-group {
+            display: flex;
+            align-items: center;
+            gap: 10px; /* Space between logo and title */
+        }
+
         header {
             display: flex;
             justify-content: space-between;
@@ -36,6 +42,12 @@
             margin-bottom: 20px;
             padding-bottom: 10px;
             border-bottom: 1px solid #333344;
+        }
+        
+        #headerLogo {
+            height: 40px; 
+            width: 40px;  
+            border-radius: 4px; /* Optional: slightly rounded corners for the logo */
         }
 
         header h1 {
@@ -65,7 +77,7 @@
             justify-content: space-between;
             padding: 10px 0;
             border-bottom: 1px solid #2a2a3b;
-            font-size: 1.1em;
+            font-size: 1.65em; /* Increased by 50% from 1.1em */
         }
         .data-item:last-child {
             border-bottom: none;
@@ -199,10 +211,10 @@
         @media (max-width: 480px) {
             body { padding: 10px; }
             .container { padding: 15px; }
-            header h1 { font-size: 1.5em; }
+            header h1 { font-size: 1.3em; } /* Adjusted slightly to accommodate logo */
             .action-buttons button { padding: 6px 10px; font-size: 0.8em; }
-            .data-item { font-size: 1em; flex-direction: column; align-items: flex-start; }
-            .data-item .label { text-align: left; margin-bottom: 3px; font-size: 0.9em; flex-basis: auto;}
+            .data-item { font-size: 1.5em; flex-direction: column; align-items: flex-start; } /* Increased by 50% from 1em */
+            .data-item .label { text-align: left; margin-bottom: 3px; font-size: 0.7em; flex-basis: auto;} /* Adjusted relative size for new parent font-size */
             .data-item .value-container { flex-basis: auto; }
             .modal-content { padding: 20px; }
         }
@@ -211,7 +223,10 @@
 <body>
     <div class="container">
         <header>
-            <h1>BTC Track</h1>
+            <div class="header-title-group">
+                <img src="./icons/512x512.png" alt="BTC Track Logo" id="headerLogo">
+                <h1>BTC Track</h1>
+            </div>
             <div class="action-buttons">
                 <button id="refreshButton">Refresh</button>
                 <button id="configButton">Config</button>
