BTC Track v1.0 - Theme adjustment

--- a/btc/index.html
+++ b/btc/index.html
@@ -208,9 +208,9 @@
         }
 
         /* Color Indicators */
-        .green { color: #4CAF50; }
-        .red { color: #F44336; }
-        .magenta { color: #E91E63; } /* For ATH proximity */
+        .green { color: #3dac41; }
+        .red { color: #eb2d20; }
+        .magenta { color: #b50edf; } /* For ATH proximity */
         .default-color { color: #e0e0e0; }
 
         @media (max-width: 480px) {
