--- a/btc/index.html
+++ b/btc/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BTC Track v1.1</title>
-    <link rel="icon" href="./icons/32x32.png" type="image/png">
+    <link rel="icon" href="./icons/32.png" type="image/png">
     <!-- You can create a 32x32.png from your 512x512.png or 192x192.png -->
-    <link rel="apple-touch-icon" href="./icons/192x192.png">
+    <link rel="apple-touch-icon" href="./icons/192.png">
     <!-- For older browsers or if you want an .ico file -->
     <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="manifest" href="manifest.json">
