--- a/gol/index.html
+++ b/gol/index.html
@@ -4,12 +4,17 @@
 <meta charset="UTF-8">
 <!-- Disable zooming -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+<title>GameOfLife</title>
+<link rel="icon" href="./icons/32x32.png" type="image/png">
+<!-- You can create a 32x32.png from your 512x512.png or 192x192.png -->
+<link rel="apple-touch-icon" href="./icons/192x192.png"> 
+<!-- For older browsers or if you want an .ico file -->
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <!-- Enable standalone web app on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <!-- PWA manifest -->
 <link rel="manifest" href="./manifest.json">
-<title>GameOfLife</title>
 <style>
 :root{--bg:#121212;--panel:#1e1e1e;--grid:#333;--accent:#ff4081;--accent2:#448aff;--text:#e0e0e0}
 html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Arial,Helvetica,sans-serif;text-align:center;overflow:hidden}
