--- a/gol/index.html
+++ b/gol/index.html
@@ -9,7 +9,7 @@
 <!-- You can create a 32x32.png from your 512x512.png or 192x192.png -->
 <link rel="apple-touch-icon" href="./icons/192x192.png"> 
 <!-- For older browsers or if you want an .ico file -->
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
 <!-- Enable standalone web app on iOS -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
