BTC Track v1.1 - Minor UI formatting fix

--- a/btc/index.html
+++ b/btc/index.html
@@ -221,6 +221,7 @@
         }
         .modal-content input[type="number"] {
             -moz-appearance: textfield; /* Firefox */
+            appearance: textfield; /* Standard property */
         }
 
         .modal-buttons {
