--- a/btc/index.html
+++ b/btc/index.html
@@ -185,7 +185,7 @@
         
         .modal-content h2 {
             margin-top: 0;
-            color: #a0a0ff; /* Will be updated by JS if accent color changes */
+            color: #f7931a; /* Will be updated by JS if accent color changes */
             border-bottom: 1px solid #444;
             padding-bottom: 10px;
             margin-bottom: 20px;
