BTC Track v1.2 - AI Tuning fix2

--- a/btc/index.html
+++ b/btc/index.html
@@ -638,7 +638,7 @@
                         contents: [{ parts: [{ text: prompt }] }],
                         tools: [ // Add this section to enable Google Search
                             {
-                                "googleSearchRetrieval": {
+                                "googleSearch": {
                                     // Empty object here usually means use default Google Search behavior
                                 }
                             }
