--- a/spiro/index.html
+++ b/spiro/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Spirograph Generator v2.2</title> 
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1A1A2E">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="description" content="A customizable spirograph pattern generator with multiple rotating nodes.">
