--- a/spiro/index.html
+++ b/spiro/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Spirograph Generator v2.2</title> 
+    <link rel="icon" href="./icons/s32.png" type="image/png">
+    <!-- You can create a 32x32.png from your 512x512.png or 192x192.png -->
+    <link rel="apple-touch-icon" href="./icons/s192.png">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1A1A2E">
     <meta name="apple-mobile-web-app-capable" content="yes">
